@@ -13,6 +13,7 @@
 #define FLUX_FVSplus 2
 #define FLUX_FDSplusFilterMultiD 3
 #define FLUX_FDSplusFilter 4
+#define FLUX_FVSplusFilter 5
 #define INTERPOL_AOWENO5 1
 #define INTERPOL_WENO5 2
 #define INTERPOL_WENO3 3
@@ -61,6 +62,7 @@ void read_disc_resconv_actions(char *actionname, char **argum, SOAP_codex_t *cod
     SOAP_add_int_to_vars(codex,"FLUX_FDSplus",FLUX_FDSplus); 
     SOAP_add_int_to_vars(codex,"FLUX_FDSplusFilterMultiD",FLUX_FDSplusFilterMultiD); 
     SOAP_add_int_to_vars(codex,"FLUX_FDSplusFilter",FLUX_FDSplusFilter); 
+    SOAP_add_int_to_vars(codex,"FLUX_FVSplusFilter",FLUX_FVSplusFilter); 
     SOAP_add_int_to_vars(codex,"FLUX_FVSplus",FLUX_FVSplus); 
     SOAP_add_int_to_vars(codex,"INTERPOL_AOWENO5",INTERPOL_AOWENO5); 
     SOAP_add_int_to_vars(codex,"INTERPOL_WENO5",INTERPOL_WENO5); 
@@ -84,8 +86,8 @@ void read_disc_resconv_actions(char *actionname, char **argum, SOAP_codex_t *cod
     if (gl->cycle.resconv.EIGENVALCOND!=EIGENVALCOND_PECLET && gl->cycle.resconv.EIGENVALCOND!=EIGENVALCOND_PARENT && gl->cycle.resconv.EIGENVALCOND!=EIGENVALCOND_HARTEN && gl->cycle.resconv.EIGENVALCOND!=EIGENVALCOND_GNOFFO)
       SOAP_fatal_error(codex,"EIGENVALCOND must be set to either EIGENVALCOND_PECLET, EIGENVALCOND_PARENT, EIGENVALCOND_HARTEN, EIGENVALCOND_GNOFFO.");
     find_int_var_from_codex(codex,"FLUX",&gl->cycle.resconv.FLUX);
-    if (gl->cycle.resconv.FLUX!=FLUX_FDSplus && gl->cycle.resconv.FLUX!=FLUX_FVSplus && gl->cycle.resconv.FLUX!=FLUX_FDSplusFilterMultiD && gl->cycle.resconv.FLUX!=FLUX_FDSplusFilter)
-      SOAP_fatal_error(codex,"FLUX must be set to either FLUX_FDSplus or FLUX_FVSplus or FLUX_FDSplusFilterMultiD or FLUX_FDSplusFilter.");
+    if (gl->cycle.resconv.FLUX!=FLUX_FDSplus && gl->cycle.resconv.FLUX!=FLUX_FVSplus && gl->cycle.resconv.FLUX!=FLUX_FDSplusFilterMultiD && gl->cycle.resconv.FLUX!=FLUX_FDSplusFilter && gl->cycle.resconv.FLUX!=FLUX_FVSplusFilter)
+      SOAP_fatal_error(codex,"FLUX must be set to either FLUX_FDSplus or FLUX_FVSplus or FLUX_FDSplusFilterMultiD or FLUX_FDSplusFilter or FLUX_FVSplusFilter.");
     find_int_var_from_codex(codex,"numiter",&gl->cycle.resconv.numiter);
 
     find_int_var_from_codex(codex,"AVERAGING",&gl->cycle.resconv.AVERAGING);
@@ -197,8 +199,19 @@ static void find_Fstar_interface(np_t *np, gl_t *gl, long l, long theta, flux_t 
 #endif
       filter_Fstar_interface_positivity_preserving(np, gl, l, theta, metrics, gl->cycle.resconv.numiter, gl->cycle.resconv.EIGENVALCOND, Finttmp, Fint, lambdaminusp1h,  lambdaplusm1h);
     break;
+    case FLUX_FVSplusFilter:
+
+#ifdef _RESTIME_CDF  
+      find_Fstar_interface_FVSplus_muscl(np, gl,  l, _al(gl,l,theta,+1), theta, musclvarsL, musclvarsR, metrics, 0, EIGENVALUES_NOT_ENFORCED_POSITIVE,  EIGENVALCOND_NONE, gl->cycle.resconv.AVERAGING, Finttmp, lambdaminusp1h, lambdaplusm1h);
+      //find_Fstar_interface_FVSplus_muscl(np, gl,  l, _al(gl,l,theta,+1), theta, musclvarsL, musclvarsR, metrics, gl->cycle.resconv.numiter, EIGENVALUES_ENFORCED_POSITIVE,  gl->cycle.resconv.EIGENVALCOND, gl->cycle.resconv.AVERAGING, Finttmp, lambdaminusp1h, lambdaplusm1h);
+#else
+      find_Fstar_interface_FVS_muscl(gl, theta, musclvarsL, musclvarsR, metrics, EIGENVALCOND_NONE, gl->cycle.resconv.AVERAGING, Finttmp);
+#endif 
+
+      filter_Fstar_interface_positivity_preserving(np, gl, l, theta, metrics, gl->cycle.resconv.numiter, gl->cycle.resconv.EIGENVALCOND, Finttmp, Fint, lambdaminusp1h,  lambdaplusm1h);
+    break;
     default:
-      fatal_error("gl->cycle.resconv.FLUX must be set to either FLUX_FDSplus, FLUX_FVSplus, or FLUX_FDSplusFilter, or FLUX_FDSplusFilterMultiD in find_Fstar_interface().");
+      fatal_error("gl->cycle.resconv.FLUX must be set to either FLUX_FDSplus, FLUX_FVSplus, or FLUX_FDSplusFilter, or FLUX_FDSplusFilterMultiD, or FLUX_FVSplusFilter in find_Fstar_interface().");
   }
 
 
