@@ -1,1 +1,1 @@
-#define VERSION "18nov24b"
+#define VERSION "18nov27a"
